--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -23,7 +23,7 @@
             width: 100%;
             text-align: center;
             line-height: 60px;
-            position: absolute;
+            position: fixed;
             bottom: 0;
         }
     </style>
